# WoolfNet

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
woolfnet/: cli.py  config.py  paths.py
woolfnet/analysis/: __init__.py  embeddings.py  neighbors.py  projection.py
woolfnet/api/: app.py  schemas.py
woolfnet/app/: tasks.py  ui.py  visualization.py
woolfnet/configs/: inference.yml
woolfnet/data/: dataset.py  tasks.py  utils.py
woolfnet/gpt/: __init__.py  config.py  evaluation.py  metrics.py  model.py  model_jax.py  model_nnx.py  tasks.py  training.py  utils.py
woolfnet/gpt/tests/: test_jax_layers.py  test_model.py
woolfnet/inference/: __init__.py  models.py
woolfnet/inference/tests/: test_models.py
woolfnet/tokenization/: tasks.py
woolfnet/tokenization/tests/: test_tokenizers.py
woolfnet/utils/: data.py  general.py  mlflow.py
